fix: fixed horizontal overflow issue on safari

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ html {
 body {
   margin: 0;
   height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
 button {
